--- a/.github/workflows/container-stable.yaml
+++ b/.github/workflows/container-stable.yaml
@@ -32,6 +32,10 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
 
+      - name: Debug
+        run:
+          - echo ${{ env.GITHUB_ACTION_REPOSITORY }}
+          - env
       - name: Build
         uses: docker/build-push-action@v2
         with:
