--- a/.github/workflows/container-stable.yaml
+++ b/.github/workflows/container-stable.yaml
@@ -32,10 +32,6 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
 
-      - name: Debug
-        run: |
-          echo ${{ env.GITHUB_ACTION_REPOSITORY }}
-          env
       - name: Build
         uses: docker/build-push-action@v2
         with:
@@ -45,7 +41,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ env.GITHUB_ACTION_REPOSITORY }}:stable
+            ghcr.io/${{ env.GITHUB_REPOSITORY }}:stable
           labels: |
             action_id=${{ github.action }}
             action_link=${{ env.LINK }}
