Try using repo info from the github object

--- a/.github/workflows/container-version.yaml
+++ b/.github/workflows/container-version.yaml
@@ -44,7 +44,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ env.GITHUB_REPOSITORY }}:${{ env.TAG }}
+            ghcr.io/${{ github.action_repository }}:${{ env.TAG }}
           labels: |
             action_id=${{ github.action }}
             action_link=${{ env.LINK }}
