Update some stuff, now everything must work

--- a/.github/workflows/container-stable.yaml
+++ b/.github/workflows/container-stable.yaml
@@ -41,7 +41,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.action_repository }}:stable
+            ghcr.io/${{ github.repository }}:stable
+            ghcr.io/${{ github.repository }}:latest
           labels: |
             action_id=${{ github.action }}
             action_link=${{ env.LINK }}
