--- a/.github/workflows/container-stable.yaml
+++ b/.github/workflows/container-stable.yaml
@@ -1,10 +1,10 @@
 ---
 name: "Stable container"
 
-on:
-  push:
-    branches:
-      - main
+# on:
+  # push:
+    # branches:
+      # - main
 
 jobs:
   containerization:
@@ -33,7 +33,7 @@ jobs:
           password: ${{ secrets.CR_PAT }}
 
       - name: Build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
