--- a/.github/workflows/container-version.yaml
+++ b/.github/workflows/container-version.yaml
@@ -9,9 +9,11 @@ on:
 jobs:
   containerization:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set version variable
         run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
@@ -29,14 +31,14 @@ jobs:
         uses: docker/setup-buildx-action@master
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
