--- a/.github/workflows/build-version.yaml
+++ b/.github/workflows/build-version.yaml
@@ -21,7 +21,7 @@ jobs:
             target: aarch64-apple-darwin
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - uses: actions-rs/toolchain@v1
         with:
@@ -34,20 +34,20 @@ jobs:
           args: --release --all-features --target=${{ matrix.target }}
 
       - name: Archive build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: build-${{matrix.target}}
-          path: ${{  github.workspace  }}/target/${{ matrix.target }}/release/clin
+          path: ${{  github.workspace  }}/target/${{ matrix.target }}/release/dudo
 
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Download artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
 
       - name: Set version variable
         run: echo "CLIN_VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
