--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ env_logger = "0.10.0"
 log = "0.4.17"
 http = "0.2.8"
 serde = { version = "1.0.126", features = ["derive"] }
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "rustls"] }
