--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ log = "0.4.17"
 http = "0.2.8"
 serde = { version = "1.0.126", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json", "blocking", "rustls"] }
+serde_yaml = "0.9"
+
+[dev-dependencies]
+tempfile = "3.4.0"
+
